--- a/index.html
+++ b/index.html
@@ -106,9 +106,7 @@
                 content: `
 ### Le Cœur du Concordat
 
-Le cœur spirituel et politique du Concordat Éthéréen. Lumen est une cité d'impossibles flèches de marbre blanc, de cathédrales dorées et de statues colossales des Avatars. C'est le siège du Haut Synode, et ses rues immaculées sont un symbole de l'ordre divin de l'Église.
-
-* **Ambiance :** Grandiose, autoritaire, propre et profondément politique.
+Le cœur spirituel et politique du Concordat Éthéréen.
                 `
             },
             {
